addition of descriptive statistics

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "[1888 rows x 8 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "249"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,16 +412,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-11-febd36a0a246>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-febd36a0a246>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    drug_v_vol = unduplicated_mice[[“Drug Regimen”,“Tumor Volume (mm3)“]].groupby(“Drug Regimen”).aggregate([‘mean’,‘median’,‘var’,‘std’,‘sem’])\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a summary statistics table of mean, median, variance, standard deviation, \n",
+    "#and SEM of the tumor volume for each regimen\n",
+    "\n",
+    "# Use groupby and summary statistical methods to calculate the following properties of each drug regimen: \n",
+    "# mean, median, variance, standard deviation, and standard error of the mean of the tumor volume. \n",
+    "\n",
+    "\n",
+    "# drug_reg = unduplicated_mice.groupby(\"Drug Regimen\").describe()\n",
+    "# drug_reg\n",
+    "\n",
+    "#drug_v_vol = unduplicated_mice[[“Drug Regimen”,“Tumor Volume (mm3)“]].groupby(“Drug Regimen”).aggregate([‘mean’,‘median’,‘var’,‘std’,‘sem’])\n",
+    "drug_v_vol = unduplicated_mice[(“Drug Regimen”, “Tumor Volume (mm3)“)].groupby(“Drug Regimen”).describe()\n",
+    "drug_v_vol"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "# EXTRA CODE \n",
     "\n",
-    "# Use groupby and summary statistical methods to calculate the following properties of each drug regimen: \n",
-    "# mean, median, variance, standard deviation, and SEM of the tumor volume. \n",
-    "# Assemble the resulting series into a single summary dataframe.\n",
-    "\n"
+    "# print(drug_reg.describe(include='all'))\n",
+    "\n",
+    "# tumor_vol = drug_reg.loc[\"Drug Regimen\", \"Tumor Volume (mm3)\"].describe()\n",
+    "# tumor_vol\n",
+    "\n",
+    "# # Assemble the resulting series into a single summary dataframe.\n",
+    "# drug_v_tumor = pd.DataFrame({\"Drug Regimin\": drug_reg\n",
+    "#                             \"Tumor Volume (mm3)\" : })\n",
+    "\n",
+    "# drug_and_vol = unduplicated_mice[unduplicated_mice(\"Tumor Volume (mm3)\").groupby(\"Drug Regimen\").describe()]\n",
+    "# drug_and_vol.head()\n",
+    "\n",
+    "# drug_and_vol = unduplicated_mice.loc[unduplicated_mice[\"Tumor Volume (mm3)\"], \"Drug Regimen\"]\n",
+    "# drug_and_vol.head()"
    ]
   },
   {
@@ -431,6 +471,7 @@
    "outputs": [],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "\n",
     "\n",
     "# Using the aggregation method, produce the same summary statistics in a single line\n"
    ]
