statistical analysis long hand

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "1893"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "[1888 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "249"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,16 +412,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-11-febd36a0a246>, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-febd36a0a246>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    drug_v_vol = unduplicated_mice[[“Drug Regimen”,“Tumor Volume (mm3)“]].groupby(“Drug Regimen”).aggregate([‘mean’,‘median’,‘var’,‘std’,‘sem’])\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Standard Deviation</th>\n",
+       "      <th>Standard Error of Mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.393463</td>\n",
+       "      <td>50.909965</td>\n",
+       "      <td>43.138803</td>\n",
+       "      <td>6.568014</td>\n",
+       "      <td>0.525862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Mean     Median   Variance  Standard Deviation  \\\n",
+       "Drug Regimen                                                        \n",
+       "Capomulin     40.675741  41.557809  24.947764            4.994774   \n",
+       "Ceftamin      52.591172  51.776157  39.290177            6.268188   \n",
+       "Infubinol     52.884795  51.820584  43.128684            6.567243   \n",
+       "Ketapril      55.235638  53.698743  68.553577            8.279709   \n",
+       "Naftisol      54.331565  52.509285  66.173479            8.134708   \n",
+       "Placebo       54.033581  52.288934  61.168083            7.821003   \n",
+       "Propriva      52.393463  50.909965  43.138803            6.568014   \n",
+       "Ramicane      40.216745  40.673236  23.486704            4.846308   \n",
+       "Stelasyn      54.233149  52.431737  59.450562            7.710419   \n",
+       "Zoniferol     53.236507  51.818479  48.533355            6.966589   \n",
+       "\n",
+       "              Standard Error of Mean  \n",
+       "Drug Regimen                          \n",
+       "Capomulin                   0.329346  \n",
+       "Ceftamin                    0.469821  \n",
+       "Infubinol                   0.492236  \n",
+       "Ketapril                    0.603860  \n",
+       "Naftisol                    0.596466  \n",
+       "Placebo                     0.581331  \n",
+       "Propriva                    0.525862  \n",
+       "Ramicane                    0.320955  \n",
+       "Stelasyn                    0.573111  \n",
+       "Zoniferol                   0.516398  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -429,52 +574,67 @@
     "#and SEM of the tumor volume for each regimen\n",
     "\n",
     "# Use groupby and summary statistical methods to calculate the following properties of each drug regimen: \n",
-    "# mean, median, variance, standard deviation, and standard error of the mean of the tumor volume. \n",
+    "# mean, median, variance, standard deviation, and standard error of the mean of the tumor volume.\n",
     "\n",
+    "mean_drug = unduplicated_mice.groupby(\"Drug Regimen\").mean()['Tumor Volume (mm3)']\n",
+    "mean_drug\n",
     "\n",
-    "# drug_reg = unduplicated_mice.groupby(\"Drug Regimen\").describe()\n",
-    "# drug_reg\n",
+    "med_drug = unduplicated_mice.groupby(\"Drug Regimen\").median()['Tumor Volume (mm3)']\n",
+    "med_drug\n",
     "\n",
-    "#drug_v_vol = unduplicated_mice[[“Drug Regimen”,“Tumor Volume (mm3)“]].groupby(“Drug Regimen”).aggregate([‘mean’,‘median’,‘var’,‘std’,‘sem’])\n",
-    "drug_v_vol = unduplicated_mice[(“Drug Regimen”, “Tumor Volume (mm3)“)].groupby(“Drug Regimen”).describe()\n",
-    "drug_v_vol"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EXTRA CODE \n",
+    "var_drug = unduplicated_mice.groupby(\"Drug Regimen\").var()['Tumor Volume (mm3)']\n",
+    "var_drug\n",
     "\n",
-    "# print(drug_reg.describe(include='all'))\n",
+    "sd_drug = unduplicated_mice.groupby(\"Drug Regimen\").std()['Tumor Volume (mm3)']\n",
+    "sd_drug\n",
     "\n",
-    "# tumor_vol = drug_reg.loc[\"Drug Regimen\", \"Tumor Volume (mm3)\"].describe()\n",
-    "# tumor_vol\n",
+    "sem_drug = unduplicated_mice.groupby(\"Drug Regimen\").sem()['Tumor Volume (mm3)']\n",
+    "sem_drug\n",
     "\n",
-    "# # Assemble the resulting series into a single summary dataframe.\n",
-    "# drug_v_tumor = pd.DataFrame({\"Drug Regimin\": drug_reg\n",
-    "#                             \"Tumor Volume (mm3)\" : })\n",
-    "\n",
-    "# drug_and_vol = unduplicated_mice[unduplicated_mice(\"Tumor Volume (mm3)\").groupby(\"Drug Regimen\").describe()]\n",
-    "# drug_and_vol.head()\n",
-    "\n",
-    "# drug_and_vol = unduplicated_mice.loc[unduplicated_mice[\"Tumor Volume (mm3)\"], \"Drug Regimen\"]\n",
-    "# drug_and_vol.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "\n",
-    "\n",
-    "# Using the aggregation method, produce the same summary statistics in a single line\n"
+    "tumor_drug = pd.DataFrame({\"Mean\": mean_drug,\n",
+    "                           \"Median\": med_drug,\n",
+    "                           \"Variance\": var_drug,\n",
+    "                           \"Standard Deviation\": sd_drug,\n",
+    "                           \"Standard Error of Mean\": sem_drug\n",
+    "                          })\n",
+    "tumor_drug"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-60-033fa2100d8e>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-60-033fa2100d8e>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    tumor_drug = unduplicated_mice[('Drug Regimen', 'Tumor Volume (mm3)')].groupby('Drug Regimen').agg([‘mean’])\u001b[0m\n\u001b[0m                                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the aggregation method, produce the same summary statistics in a single line\n",
+    "\n",
+    "tumor_drug = unduplicated_mice[('Drug Regimen', 'Tumor Volume (mm3)')].groupby('Drug Regimen').agg([‘mean’, ‘median’, ‘var’, ‘std’, ‘sem’])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
