udpated single line desciptive statistics format

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -620,76 +620,166 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Tumor Volume (mm3)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Standard Diviation</th>\n",
+       "      <th>Standard Error of the Mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Drug Regimen</th>\n",
-       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>45.000000</td>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>38.825898</td>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>35.014271</td>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>34.223992</td>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>32.997729</td>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.393463</td>\n",
+       "      <td>50.909965</td>\n",
+       "      <td>43.138803</td>\n",
+       "      <td>6.568014</td>\n",
+       "      <td>0.525862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Drug Regimen  Tumor Volume (mm3)\n",
-       "0     Ramicane           45.000000\n",
-       "1     Ramicane           38.825898\n",
-       "2     Ramicane           35.014271\n",
-       "3     Ramicane           34.223992\n",
-       "4     Ramicane           32.997729"
+       "             Tumor Volume (mm3)                                           \\\n",
+       "                           Mean     Median   Variance Standard Diviation   \n",
+       "Drug Regimen                                                               \n",
+       "Capomulin             40.675741  41.557809  24.947764           4.994774   \n",
+       "Ceftamin              52.591172  51.776157  39.290177           6.268188   \n",
+       "Infubinol             52.884795  51.820584  43.128684           6.567243   \n",
+       "Ketapril              55.235638  53.698743  68.553577           8.279709   \n",
+       "Naftisol              54.331565  52.509285  66.173479           8.134708   \n",
+       "Placebo               54.033581  52.288934  61.168083           7.821003   \n",
+       "Propriva              52.393463  50.909965  43.138803           6.568014   \n",
+       "Ramicane              40.216745  40.673236  23.486704           4.846308   \n",
+       "Stelasyn              54.233149  52.431737  59.450562           7.710419   \n",
+       "Zoniferol             53.236507  51.818479  48.533355           6.966589   \n",
+       "\n",
+       "                                         \n",
+       "             Standard Error of the Mean  \n",
+       "Drug Regimen                             \n",
+       "Capomulin                      0.329346  \n",
+       "Ceftamin                       0.469821  \n",
+       "Infubinol                      0.492236  \n",
+       "Ketapril                       0.603860  \n",
+       "Naftisol                       0.596466  \n",
+       "Placebo                        0.581331  \n",
+       "Propriva                       0.525862  \n",
+       "Ramicane                       0.320955  \n",
+       "Stelasyn                       0.573111  \n",
+       "Zoniferol                      0.516398  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unduplicated_mice[['Drug Regimen', 'Tumor Volume (mm3)']].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Using the aggregation method, produce the same summary statistics in a single line\n",
     "\n",
     "tumor_drug = unduplicated_mice[['Drug Regimen', 'Tumor Volume (mm3)']].groupby('Drug Regimen').agg(['mean', 'median', 'var', 'std', 'sem'])\n",
-    "tumor_drug.head()"
+    "tumor_drug.rename(columns={\"mean\": \"Mean\", \n",
+    "                          \"median\": \"Median\", \n",
+    "                         \"var\": \"Variance\", \n",
+    "                         \"std\": \"Standard Diviation\", \n",
+    "                         \"sem\": \"Standard Error of the Mean\"})\n"
    ]
   },
   {
