first bar chart

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -1608,7 +1608,8 @@
    "outputs": [],
    "source": [
     "# Generate a bar plot showing the total number of measurements taken on each drug regimen using pyplot.\n",
-    "\n"
+    "\n",
+    "Next"
    ]
   },
   {
